test/error/Lsl1.mod
MODULE Lsl2;

 CONST N* = LSL(-8FFFFFFH, 4);

 PROCEDURE Go*;
 END Go;

END Lsl2.
